# negative-space-core

./: AGENT.md  Cargo.toml  README.md
docs/: FUTURE-INTEGRATION.md
src/: avoidance_tracker.rs  batch_analyzer.rs  conservation_law.rs  feedback_loop.rs  inference_engine.rs  lib.rs  negative_space.rs
